analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/inheritedSuspend.kt
open class Foo {
    open suspend fun bar(): String = "Hello, World!"
}

class Bar : Foo() {
    override fun b<caret>ar(): String = "Hello, Kotlin!"
}
